# Anima-in-Machina

./: .gitignore  EXAMPLE_JOURNEY_ARCS.md  README.md  TRAKTOR_AUTOMATION_ANALYSIS.md  TRANSITION_TECHNIQUES.md
.claude/: napkin.md
ai-dj-mcp-server/: INSTALLATION.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  USAGE_EXAMPLES.md  pyproject.toml  requirements.txt
ai-dj-mcp-server/src/ai_dj_mcp/: __init__.py  nml_reader.py  server.py  traktor_track.py
track-selection-engine/: README.md  WORKFLOW_GUIDE.md  analyze_custom_playlist.py  best-of-deep-dub-tech-house-ai-ordered.json  best-of-deep-dub-tech-house-ai-ordered.m3u  best-of-deep-dub-tech-house.json  best-of-deep-dub-tech-house.m3u  create_best_of_playlist.py  create_best_of_playlist_smart.py  create_custom_playlist.py  custom_playlist.m3u  custom_playlist.txt  deep-space-journey.json  deep-space-journey.m3u  import_bpm_list.py  import_with_file_paths.py  playlist.json  playlist.m3u
traktor-automation/: AUDIO_ANALYSIS.md  BEFORE_AND_AFTER.md  BROWSER_NAVIGATION_FIX.md  CUE_POINT_AUTOMATION.md  CUE_PROCESSING_RESULTS.md  CUE_QUICK_START.md  GETTING_STARTED.md  HARDWARE_MIDI_SETUP.md  INDEX.md  MAPPING_VERIFICATION_CHECKLIST.md  MONITOR_AI_DJ.sh  QUICK_BROWSER_FIX.md  QUICK_COMMANDS.sh  QUICK_REFERENCE.md  README.md  READY_TO_GO.md  SESSION_SUMMARY.md  SETUP_INSTRUCTIONS.md  START_AI_DJ.sh  SUMMARY.md  SUPER_XTREME_MAPPER_GUIDE.md  TRAKTOR_MIDI_MAPPING_GUIDE.md  Traktor_AI_DJ_MIDI_Mapping.tsi  WHATS_NEW.md  audio_analyzer.py  check_dir_entries.py  compare_cues.py  deep_house_cue_writer.py  demo_analysis.py  (+15 more)
(+20 files in other folders)
