[project]
name = "ai-dj-mcp-server"
version = "0.2.0"
description = "MCP server for Traktor-first DJ tools — reads collection.nml as primary data source, librosa as optional enhancement"
authors = [{name = "Dan Taylor"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
